fix: list of contracts for a client